--- a/viewItem.ui
+++ b/viewItem.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>701</width>
-    <height>161</height>
+    <width>994</width>
+    <height>117</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,8 +24,8 @@
     <rect>
      <x>10</x>
      <y>20</y>
-     <width>681</width>
-     <height>61</height>
+     <width>961</width>
+     <height>53</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -33,71 +33,49 @@
      <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
     </property>
     <item>
-     <widget class="QLineEdit" name="txtTitle_2">
+     <widget class="QTextEdit" name="txtTitle_2">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
-      <property name="text">
-       <string>Author</string>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="txtAuthor_2">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-     </widget>
+     <widget class="QTextEdit" name="txtAuthor_2"/>
     </item>
     <item>
-     <widget class="QLineEdit" name="txtFormat_2">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-     </widget>
+     <widget class="QTextEdit" name="txtFormat_2"/>
     </item>
     <item>
-     <widget class="QLineEdit" name="txtAvailable_2">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-     </widget>
+     <widget class="QTextEdit" name="txtAvailable_2"/>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="AddLoanButton">
       <property name="text">
        <string>PutOnLoan</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_4">
+     <widget class="QPushButton" name="AddHoldButton">
       <property name="text">
        <string>PutOnHold</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="ReturnLoanButton">
+      <property name="text">
+       <string>ReturnLoan</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="RetunHoldButton">
+      <property name="text">
+       <string>ReturnHold</string>
       </property>
      </widget>
     </item>
