--- a/browsecatalogue.ui
+++ b/browsecatalogue.ui
@@ -16,7 +16,7 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="accountButton">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -55,14 +55,14 @@
          </rect>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout">
-         <item alignment="Qt::AlignmentFlag::AlignHCenter">
+         <item>
           <widget class="QLabel" name="label_4">
            <property name="text">
             <string>Title</string>
            </property>
           </widget>
          </item>
-         <item alignment="Qt::AlignmentFlag::AlignHCenter">
+         <item>
           <widget class="QLabel" name="label_3">
            <property name="text">
             <string>Author</string>
